# mem

./: .gitignore  20251209_work.md  AGENTS.md  README.md  env_settings.py  final.md  main.py  mem  merge.md  plan.md  pyproject.toml  todo.md  where_we_stand.md
.github/ISSUE_TEMPLATE/: mem-spec.yml
.mem/: config.toml  mem.db
.mem/logs/: benjamin_van_heerden_20260105_session.md  benjamin_van_heerden_20260106_session.md  benjamin_van_heerden_20260107_122912_session.md  benjamin_van_heerden_20260107_124357_session.md  benjamin_van_heerden_20260107_132742_session.md  benjamin_van_heerden_20260107_session.md  benjamin_van_heerden_20260108_105152_session.md  benjamin_van_heerden_20260108_112036_session.md  benjamin_van_heerden_20260108_125815_session.md  benjamin_van_heerden_20260108_150728_session.md  benjamin_van_heerden_20260109_142915_session.md  benjamin_van_heerden_20260109_151012_session.md  benjamin_van_heerden_20260109_152205_session.md  benjamin_van_heerden_20260109_162526_session.md  benjamin_van_heerden_20260109_163636_session.md  benjamin_van_heerden_20260110_114950_session.md  benjamin_van_heerden_20260110_120551_session.md  benjamin_van_heerden_20260110_153520_session.md  benjamin_van_heerden_20260110_162208_session.md  benjamin_van_heerden_20260110_182358_session.md  benjamin_van_heerden_20260110_182952_session.md  benjamin_van_heerden_20260111_130828_session.md  (+13 more)
agent_rules/commands/: c_log_work.md  (+2 more)
migrations/: 20251130200525_create_initial_schema_DOWN.sql  20251130200525_create_initial_schema_UP.sql  20251210125111_alter_schema_tasks_specs_worklogs_DOWN.sql  20251210125111_alter_schema_tasks_specs_worklogs_UP.sql
scripts/: migrate.py  migrate_agent_rules.py
src/: models.py
tests/: conftest.py  test_config_drift.py  test_docs.py  test_github_api.py  test_github_sync.py  test_init.py  test_logs_username.py  test_merge.py  test_merge_into.py  test_sandbox.py  test_spec_abandon.py  test_spec_activate.py  test_spec_assign.py  test_spec_complete.py  test_spec_subdirectories.py  test_sync_pr_detection.py  test_task_integrity.py
(+319 files in other folders)
