[project]
name = "mem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.45",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "textual>=6.8.0",
    "typer>=0.20.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = ["./"]
permissive-ignores = true
