[project]
name = "mem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.24",
    "chromadb>=1.4.0",
    "gitpython>=3.1.45",
    "markdown>=3.10",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pygithub>=2.8.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "textual>=6.8.0",
    "typer>=0.20.0",
    "unstructured>=0.18.27",
    "voyageai>=0.3.7",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = ["./"]
permissive-ignores = true

[dependency-groups]
dev = [
    "filelock>=3.18.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
